schema/testdata/validation_returns_edge_cases/schema.keel
message Foo {
  bar Text
}

model Person {
  functions {
    read getPersonWithMultipleReturns() returns(Foo, Any)
    read getPersonWithLowercaseAny() returns(any)
  }
}